[metadata]
description =  Python-based visualisation tools for transport data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Transport-for-the-North/caf.viz
author = Transport for the North
maintainer = Transport for the North
license = GPL-3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
project_urls =
      Bug Tracker = https://github.com/Transport-for-the-North/caf.viz/issues
      Source = https://github.com/Transport-for-the-North/caf.viz

[options]
namespace_packages = caf
python_requires = >=3.9
install_requires =
    numpy>=1.19.0
    pandas>=1.4.0

[options.extras_require]
testing =
    pytest~=7.1.2
    pytest-cov~=2.12.1
    mypy>=0.910
    pylint>=2.14.5
    tox~=3.24.3

[options.package_data]
caf.viz = py.typed

[versioneer]
VCS = git
style = pep440-post
versionfile_source = src/caf/viz/_version.py
versionfile_build = caf/viz/_version.py
tag_prefix = v